# awesomeengine

./: README.md  pyproject.toml  setup.py
awesomeengine/: __init__.py  basicbehaviors.py  basiccomponents.py  behavior.py  behaviormanager.py  camera.py  clock.py  component.py  componentmanager.py  engine.py  entity.py  entitymanager.py  geometry.py  input.py  layer.py  mode.py  rectangle.py  resourcemanager.py  spatialmap.py
editor/res/inputmaps/: default.json
example/: behaviors.py  components.py  example.py  modes.py
example/res/animations/: test.json
example/res/entities/: button.json  button_mouse.json  camera.json  camera2.json  hello.json  hud_button.json  hud_smile.json  manager.json  mouse.json  smile.json  welcome_camera.json
example/res/inputmaps/: default.json
src/awesomeengine/: basicbehaviors.py  behavior.py  behaviormanager.py  engine.py  entity.py  input.py  jsonparser.py  resourcemanager.py  spatialmap.py  view.py
src/awesomeengine/_ffi/: SDL.py  SDL_mixer.py  SDL_ttf.py
src/example/: behaviors.py  example.py  modes.py
src/example/res/entities/: button.json  button_cam.json  camera.json  camera2.json  hello.json  smile.json  welcome_camera.json
src/example/res/inputmaps/: default.json
