[tool.poetry]
name = "awesomeengine"
version = "2.0.0pre"
description = "A 2D game engine designed for rapid prototyping."
authors = ["Jonathan Doda <jonathan@jdoda.ca>", "Daniel Lister <dan.lister@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
